--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <h3>Profile</h3>
     <ul>
-      <li>ただのおんぷ</li>
-      <li>日本</li>
-      <li>三人称視点ゲーム</li>
+      <li>名前（ハンドルネームでも可）</li>
+      <li>所在地（県や市まででOK）</li>
+      <li>得意領域（Web開発、サーバ運用など）</li>
     </ul>
 
     <h3>Skills</h3>
