--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <p>連絡先やSNSのアカウントを書きましょう。</p>
     <ul>
       <li><a href="mailto:name@example.com">Mail</a></li>
+      <li><a href="https://x.com/ZENStudy_info">X</a></li>
       <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
     </ul>
 
@@ -74,6 +75,9 @@
       </tr>
       <tr>
         <th>2018年</th>
+        <td>学校法人角川ドワンゴ学園<a href="https://nnn.ed.jp/">N高等学校</a>卒業</td>
+      <tr>
+        <th>20XX年</th>
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
