--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </table>
 
     <h3>好きな動画</h3>
-    <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/a51VH9BYzZA?si=DBFSbw2c2VvoLHDK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/a51VH9BYzZA?si=DBFSbw2c2VvoLHDK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
     
   </body>
 </html>
